--- a/Fussball.html
+++ b/Fussball.html
@@ -12,9 +12,7 @@
       </div>
       <div class="nextpages">
         <h2>
-          <a href="Europa_Meisterschaft.html" class="link"
-            >Europameisterschaft</a
-          ></h2>
+          <a href="Europa_Meisterschaft.html" class="link">Europameisterschaft</a></h2>
         <h2><a href="Top_Vereine.html" class="link">Top Vereine</a></h2>
         <h2><a href="Top_Spieler.html" class="link">Top Spieler</a></h2>
       </div>
