--- a/Fussball.html
+++ b/Fussball.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Fussball</title>
-    <link rel="Stylesheet" href="Fussball/css/Style_Fussball.css">
+    <link rel="Stylesheet" href="/css/Style_Fussball.css">
   </head>
   <body>
     <h1>Fussball</h1>
